<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HITnews</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="begin_button_label">开始阅读</string>
    <string name="begin_text">敬请期待</string>
    <string name="begin_label">今日新闻</string>
    <string name="web_choose_label">来源网页设置</string>
    <string name="web_choose_title">来源网页列表</string>
    <string name="key_choose_label">关键字设置</string>
    <string name="register_label">注册</string>
    <string name="log_label">登录</string>
    <string name="settings_shortcut">s</string>
    <string name="jwc_title">哈工大教务处</string>
    <string name="jwc_summary">提供教务处的最新信息，比如选课，四六级报考</string>
    <string name="today_HIT_title">今日哈工大</string>
    <string name="today_HIT_summary">提供今日哈工大上的最新信息，比如招生就业</string>
    <string name="cs_title">哈工大计算机学院</string>
    <string name="cs_summary">提供哈工大计算机学院的最新信息，比如科研成果</string>
	<string name="key_kaoyan_title">考研</string>
	<string name="key_kaoyan_summary">哈工大考研信息</string>
	<string name="key_chuguo_title">留学</string>
	<string name="key_chuguo_summary">海外留学信息</string>
	<string name="key_jiuye_title">就业</string>
	<string name="key_jiuye_summary">就业信息</string>
	<string name="key_xuanke_title">选课</string>
	<string name="key_xuanke_summary">选课信息</string>
	<string name="key_free_button_label">自定义关键字</string>
	 <string name="login_dialog_account">账号:</string>
    <string name="login_dialog_account_hint">输入账号/邮箱</string>
    <string name="login_dialog_password">密码:</string>
    <string name="login_dialog_password_hint">输入密码</string>
    <string name="login_dialog_rememberMe">记住我的登录信息</string>
    <string name="login_dialog_login">登  录</string>
    <string name="login_dialog_reg">注  册</string>
	<string name="user_label">用户</string>
	  <string name="userEmail">邮箱</string>
    <string name="userEmailtTips">请填写邮箱地址...</string>
    <string name="userSex">性别</string>
    <string name="userlocation">所在地</string>
    <string name="userlocationHint">请填写所在地</string>
    <string name="summary">简介</string>
    <string name="summaryTips">请填写简介...</string>
    <string name="summaryHint">请填写个人简介</string>
    <string name="birthday">生日</string>
    <string name="birthdayHint">请填写生日</string>
    <string name="qq">QQ</string>
    <string name="qqtTips">请填写QQ号...</string>
    <string name="qqHint">QQ帐号</string>
    <string name="locationDialogTitle">选择所在地</string>
    <string name="submitupdate">提交修改</string>
    <string name="reg">注册</string>
    <string name="regName">账号:</string>
    <string name="regNameHint">由任意字符构成</string>
    <string name="regEmail">邮箱:</string>
    <string name="regEmailHint">您常用的邮箱地址</string>
    <string name="regSex">性别:</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="regBirthday">生日:</string>
    <string name="regPassword">输入密码:</string>
    <string name="regPaswordHint">区分大小写</string>
    <string name="regPassword2">确认密码:</string>
    <string name="regPasword2Hint">再次输入密码</string>
    <string name="regEmptyError">以上内容都需要填写！请检查...</string>
    <string name="regNameError">账号输入错误！</string>
	<string name="regEmailError">邮箱输入错误！请输入正确的邮箱</string>
	<string name="regPasswordError">两次输入的密码不一致！请重新输入确认密码</string>
	<string name="checkEmailFail">该用户名或邮箱已存在，请重新输入！</string>
	<string name="regUserFail">注册失败，请重新输入！</string>
	<string name="regUserSuccess">注册成功！</string>
	
    <string name="userFeedBackTitle">用户反馈</string>
    <string name="feedbackhits">请输入您的意见和建议</string>
    <string name="feedback_label">用户反馈</string>
    <string name="feedback_def_title">默认反馈信息标题</string>
    <!-- FeedBack End-->
</resources>
