<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item android:id="@+id/web_choose"
       android:title="@string/web_choose_label"
       android:alphabeticShortcut="@string/settings_shortcut" /> 
     <item android:id="@+id/key_choose"
       android:title="@string/key_choose_label"
       android:alphabeticShortcut="@string/settings_shortcut" /> 
      <item android:id="@+id/register"
       android:title="@string/register_label"
       android:alphabeticShortcut="@string/settings_shortcut" /> 
       <item android:id="@+id/log"
       android:title="@string/log_label"
       android:alphabeticShortcut="@string/settings_shortcut" /> 
         <item android:id="@+id/feedback"
       android:title="@string/feedback_label"
       android:alphabeticShortcut="@string/settings_shortcut" /> 
     
</menu>
